test/error/2/ConcatSpace.java
public class ConcatSpace {

  // Errors because tests expect two string inputs
  public String main(String a, int b) {
    return a.toLowerCase() + " " + Integer.toString(b);
  }

}
